--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "start": "node server/app.js"
+    "start": "node server/app.js", 
+    "test" : "echo \"No tests specified\""
   },
   "dependencies": {
     "express": "^4.16.2"
