--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor", 
+    "npm": "^5.3.0"
   },
   "babel": {
     "presets": [
