--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-dist/
+dist/bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
@@ -30,5 +30,5 @@ dist/
 node_modules/
 bower_components/
 
-#OS files 
+#OS files
 *.DS_Store
