--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-dist/bundle.js
+./client/dist/bundle.js
+*.bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
