--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "test": "echo \"No tests specified\""
+    "test": "echo \"No tests specified\"",
+    "demon": "nodemon server/index.js",
+    "dev": "webpack -d --watch",
+    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jquery": "^3.2.1",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "underscore": "^1.8.3",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "npm": "^5.3.0"
