--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,7 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-./client/dist/bundle.js
-*.bundle.js
+client/dist/bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
