--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "test": "echo \"No tests specified\"",
+    "test": "mocha",
     "demon": "nodemon server/app.js",
     "dev": "webpack -d --watch",
     "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
@@ -31,7 +31,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
+    "chai": "^4.1.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "mocha": "^4.0.1",
     "npm": "^5.3.0"
   },
   "babel": {
