--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "test": "mocha",
+    "test": "mocha ./spec --recursive ",
+    "test2": "mocha ./spec ./spec/client ./spec/server",
     "demon": "nodemon server/app.js",
     "dev": "webpack -d --watch",
     "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
