--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
+    "mysql": "^2.15.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "sync-exec": "^0.6.2",
