--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test2": "mocha ./spec ./spec/client ./spec/server",
     "demon": "nodemon server/app.js",
     "dev": "webpack -d --watch",
-    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
+    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
+    "postinstall": "webpack"
   },
   "dependencies": {
     "axios": "^0.17.1",
