--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "react-dom": "^16.1.1",
     "sync-exec": "^0.6.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.8.1"
-  },
-  "devDependencies": {
+    "webpack": "^3.8.1",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "^6.7.2"
+  },
+  "devDependencies": {
     "chai": "^4.1.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "mocha": "^4.0.1",
