--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test2": "mocha ./spec ./spec/client ./spec/server",
     "demon": "nodemon server/app.js",
     "dev": "webpack -d --watch",
-    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
+    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
+    "postinstall": "webpack"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -26,15 +27,15 @@
     "react-dom": "^16.1.1",
     "sync-exec": "^0.6.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.8.1"
-  },
-  "devDependencies": {
+    "webpack": "^3.8.1",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "^6.7.2"
+  },
+  "devDependencies": {
     "chai": "^4.1.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "mocha": "^4.0.1",
