--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.7.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-mysql-session": "^1.2.3",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mysql": "^2.15.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "sync-exec": "^0.6.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.8.1",
-    "babel-cli": "^6.7.5",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.7.2"
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
