--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
     "babylon": "^6.18.0",
     "body-parser": "^1.18.2",
@@ -39,6 +37,9 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^0.8.0",
     "chai-http": "^3.0.0",
@@ -51,7 +52,7 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "npm": "^5.3.0",
-    "react-addons-test-utils": "^15.6.2"
+    "react-test-renderer": "^16.1.1"
   },
   "babel": {
     "presets": [
