--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "npm": "^5.3.0",
-    "react-test-renderer": "^16.1.1"
+    "react-test-renderer": "^16.1.1",
+    "sinon": "^4.1.2"
   },
   "babel": {
     "presets": [
