--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "test": "mocha ./spec --recursive ",
-    "test2": "mocha ./spec ./spec/client ./spec/server",
+    "test": "mocha ./spec --recursive  --compilers js:babel-core/register",
+    "test2": "mocha ./spec ./spec/client ./spec/server  --compilers js:babel-core/register test*.js",
     "demon": "nodemon server/app.js",
     "dev": "webpack -d --watch",
     "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
@@ -22,9 +22,8 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
+    "babylon": "^6.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-mysql-session": "^1.2.3",
@@ -38,15 +37,28 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "chai-enzyme": "^0.8.0",
     "chai-http": "^3.0.0",
+    "coveralls": "^3.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^21.2.1",
+    "jsdom": "^11.4.0",
     "mocha": "^4.0.1",
-    "npm": "^5.3.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "npm": "^5.3.0",
+    "react-test-renderer": "^16.1.1",
+    "sinon": "^4.1.2"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   }
 }
