--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "npm": "^5.3.0",
     "react-test-renderer": "^16.1.1",
-    "sinon": "^4.1.2"
+    "sinon": "^4.1.2",
+    "react-addons-test-utils": "^15.6.2"
   },
   "babel": {
     "presets": [
